--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,7 @@
 <p style='font-size:30px;'> &#127969; Home </p><hr>
 
-<p style='font-size:20px;'> &#128059; <%= link_to 'Ursinhos', bears_path %> </p>
+<p style='font-size:18px;'> &#128059; <%= link_to 'Ursinhos', bears_path %> </p>
+
+<p style='font-size:18px;'> &#128048; <%= link_to 'Coelhinhos', rabbits_path %> </p>
+
+<p style='font-size:18px;'> &#128021; <%= link_to 'Doguinhos', dogs_path %> </p>
