--- a/app/views/bears/index.html.erb
+++ b/app/views/bears/index.html.erb
@@ -8,7 +8,18 @@
 
   <div>
     <p>Nome: <%= bear.name %></p>
-    <p>Cor: <%= bear.color %></p>
+
+    <div>
+      Cor: 
+      <div style="border-radius:80%; 
+                  border:solid 1px; 
+                  width:15px; 
+                  height:15px;
+                  display: inline-block;
+                  background-color:<%= bear.color %>">
+      </div>
+    </div>
+
     <p>Tamanho: <%= bear.size %></p>
 
     <%= link_to 'Editar', edit_bear_path(bear)  %>
@@ -16,3 +27,5 @@
   </div><hr>
 
 <% end  %>
+
+
