--- a/app/views/rabbits/new.html.erb
+++ b/app/views/rabbits/new.html.erb
@@ -1,16 +1,16 @@
-<p><%= link_to 'Voltar', bears_path %></p>
+<p><%= link_to 'Voltar', rabbits_path %></p>
 
-<p style='font-size:20px;'> Alterar urso &#128059; </p><hr>
+<p style='font-size:20px;'> Adicionar coelho &#128048; </p><hr>
 
-<% if @bear.errors.any? %>
+<% if @rabbit.errors.any? %>
 
-  <% @bear.errors.full_messages.each do |message| %>
+  <% @rabbit.errors.full_messages.each do |message| %>
     <p>O campo <%= t(message) %></p>
   <% end %>
 
 <% end %>
 
-<%= form_with model: @bear, local:true do |f| %>
+<%= form_with model: @rabbit, local:true do |f| %>
 
   <p>
     <%= f.label :name, 'Nome' %>
@@ -23,5 +23,7 @@
     
   </p><br>
 
-  <%= f.submit "Alterar" %>
+  <%= f.submit "Adicionar" %>
 <% end %>
+
+
