--- a/app/views/rabbits/show.html.erb
+++ b/app/views/rabbits/show.html.erb
@@ -15,4 +15,7 @@
     </div>
   </div>
   <p>Tamanho: <%= @rabbit.size %></p>
+
+  <p><%= image_tag(@rabbit.image_url(:thumb).to_s) %></p>
+  
 </div>
