--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -20,6 +20,9 @@
    
     <%= f.label :color, 'Cor' %>
     <%= f.color_field(:color) %>
+
+    <%= f.label :image, 'Adicionar imagem' %>
+    <%= f.file_field :image %>
     
   </p><br>
 
