--- a/app/views/bears/index.html.erb
+++ b/app/views/bears/index.html.erb
@@ -22,7 +22,7 @@
 
     <p>Tamanho: <%= bear.size %></p>
 
-    <p>Imagem: <%= image_tag(bear.image_url(:thumb).to_s) %></p>
+    <div><%= image_tag(bear.image_url(:thumb).to_s) %></div>
     
 
     <%= link_to 'Editar', edit_bear_path(bear)  %>
