--- a/app/views/bears/new.html.erb
+++ b/app/views/bears/new.html.erb
@@ -2,13 +2,7 @@
 
 <p style='font-size:20px;'> Cadastrar urso &#128059; </p><hr>
 
-<% if @bear.errors.any? %>
-
-  <% @bear.errors.full_messages.each do |message| %>
-    <p>O campo <%= t(message) %></p>
-  <% end %>
-
-<% end %>
+<%= render "shared/errors", animal: @bear %>
 
 <%= form_with model: @bear, local:true do |f| %>
 
